import { describe, expect, test } from 'vitest';
import { ItemTraverseNodeErrorType, traverseEntity } from './ItemTraverser.js';
import { copyEntity, normalizeEntityFields } from './ItemUtils.js';
import {
  groupValidationIssuesByTopLevelPath,
  validateEntityInfoForCreate,
  validateEntityInfoForUpdate,
  validateTraverseNodeForPublish,
  validateTraverseNodeForSave,
  type PublishValidationIssue,
  type SaveValidationIssue,
} from './ItemValidator.js';
import {
  createRichTextParagraphNode,
  createRichTextRootNode,
  createRichTextTextNode,
} from './RichTextUtils.js';
import { AdminSchema, FieldType } from './Schema.js';
import type { AdminEntityCreate, EntityLike } from './Types.js';

const adminSchema = AdminSchema.createAndValidate({
  entityTypes: [
    {
      name: 'RichTextsEntity',
      fields: [{ name: 'anyNodes', type: FieldType.RichText }],
    },
    {
      name: 'StringsEntity',
      authKeyPattern: 'noneSubject',
      fields: [
        { name: 'required', type: FieldType.String, required: true },
        { name: 'pattern', type: FieldType.String, matchPattern: 'fooBarBaz' },
        { name: 'patternList', type: FieldType.String, list: true, matchPattern: 'fooBarBaz' },
      ],
    },
    {
      name: 'ValueItemsEntity',
      fields: [{ name: 'any', type: FieldType.ValueItem }],
    },
  ],
  valueTypes: [{ name: 'AdminOnlyValueItem', adminOnly: true, fields: [] }],
  patterns: [
    { name: 'fooBarBaz', pattern: '^(foo|bar|baz)$' },
    { name: 'noneSubject', pattern: '^(none|subject)$' },
  ],
}).valueOrThrow();

const STRINGS_ENTITY_DEFAULT: AdminEntityCreate = {
  info: { type: 'StringsEntity', name: 'StringsEntity', authKey: 'none' },
  fields: { required: '-' },
};

const RICH_TEXTS_ENTITY_DEFAULT: AdminEntityCreate = {
  info: { type: 'RichTextsEntity', name: 'RichTextsEntity', authKey: 'none' },
  fields: {},
};

const VALUE_ITEMS_ENTITY_DEFAULT: AdminEntityCreate = {
  info: { type: 'ValueItemsEntity', name: 'ValueItemsEntity', authKey: 'none' },
  fields: {},
};

function validateEntity(entity: EntityLike) {
  const normalizedEntity = {
    ...entity,
    fields: normalizeEntityFields(adminSchema, entity).valueOrThrow(),
  };

  const errors: (SaveValidationIssue | PublishValidationIssue)[] = [];
  for (const node of traverseEntity(adminSchema, ['entity'], normalizedEntity)) {
    const error = validateTraverseNodeForSave(adminSchema, node);
    if (error) {
      errors.push(error);
    }
  }

  for (const node of traverseEntity(
    adminSchema.toPublishedSchema(),
    ['entity'],
    normalizedEntity
  )) {
    const error = validateTraverseNodeForPublish(adminSchema, node);
    if (error) {
      errors.push(error);
    }
  }

  return errors;
}

describe('validateEntityInfoForCreate', () => {
  test('no type', () => {
    expect(
      validateEntityInfoForCreate(adminSchema, ['entity'], {
        info: { type: '', name: 'No type', authKey: 'none' },
        fields: {},
      })
    ).toMatchSnapshot();
  });

  test('invalid type', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { type: 'InvalidType' } })
      )
    ).toMatchSnapshot();
  });

  test('no authKey', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { authKey: '' } })
      )
    ).toMatchSnapshot();
  });

  test('authKey not matching pattern', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { authKey: 'something else' } })
      )
    ).toMatchSnapshot();
  });

  test('no name', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { name: '' } })
      )
    ).toMatchSnapshot();
  });

  test('name with line break', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { name: 'Hello\nworld' } })
      )
    ).toMatchSnapshot();
  });

  test('invalid version', () => {
    expect(
      validateEntityInfoForCreate(
        adminSchema,
        ['entity'],
        copyEntity(STRINGS_ENTITY_DEFAULT, { info: { version: 1 as 0 } })
      )
    ).toMatchSnapshot();
  });
});

describe('validateEntityInfoForUpdate', () => {
  test('change type', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { type: 'RichTextsEntity' }, fields: {} }
      )
    ).toMatchSnapshot();
  });

  test('valid: same type', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { type: 'StringEntity' }, fields: {} }
      )
    ).toBeNull();
  });

  test('change authKey', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { authKey: 'subject' }, fields: {} }
      )
    ).toMatchSnapshot();
  });

  test('valid: same authKey', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { authKey: 'none' }, fields: {} }
      )
    ).toBeNull();
  });

  test('name with line break', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { name: 'hello\nworld' }, fields: {} }
      )
    ).toMatchSnapshot();
  });

  test('version with wrong value', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { version: 1 }, fields: {} }
      )
    ).toMatchSnapshot();
  });

  test('valid: version with correct value', () => {
    expect(
      validateEntityInfoForUpdate(
        ['entity'],
        { info: { type: 'StringEntity', authKey: 'none', version: 1 } },
        { id: '123', info: { version: 2 }, fields: {} }
      )
    ).toBeNull();
  });
});

describe('validateTraverseNodeForSave', () => {
  test('error', () => {
    expect(
      validateTraverseNodeForSave(adminSchema, {
        type: 'error',
        path: ['entity', 'foo'],
        errorType: ItemTraverseNodeErrorType.generic,
        message: 'Error message',
      })
    ).toMatchSnapshot();
  });
});

describe('Validate entity', () => {
  test('Pass: matchPattern matched string', () => {
    expect(
      validateEntity(copyEntity(STRINGS_ENTITY_DEFAULT, { fields: { pattern: 'baz' } }))
    ).toEqual([]);
  });

  test('Fail: matchPattern unmatched string', () => {
    expect(
      validateEntity(copyEntity(STRINGS_ENTITY_DEFAULT, { fields: { pattern: 'will not match' } }))
    ).toMatchSnapshot();
  });

  test('Fail: required with no value', () => {
    expect(
      validateEntity(copyEntity(STRINGS_ENTITY_DEFAULT, { fields: { required: null } }))
    ).toMatchSnapshot();
  });

  test('Pass: matchPattern matched string items in list', () => {
    expect(
      validateEntity(
        copyEntity(STRINGS_ENTITY_DEFAULT, { fields: { patternList: ['foo', 'bar', 'baz'] } })
      )
    ).toEqual([]);
  });

  test('Fail: matchPattern unmatched string item in list', () => {
    expect(
      validateEntity(
        copyEntity(STRINGS_ENTITY_DEFAULT, { fields: { patternList: ['foo', 'will not match'] } })
      )
    ).toMatchSnapshot();
  });

  test('Fail: rich text text node with line break', () => {
    expect(
      validateEntity(
        copyEntity(RICH_TEXTS_ENTITY_DEFAULT, {
          fields: {
            anyNodes: createRichTextRootNode([
              createRichTextParagraphNode([createRichTextTextNode('hello\nworld')]),
            ]),
          },
        })
      )
    ).toMatchSnapshot();
  });

  test('Fail: admin only value item in normal field', () => {
    expect(
      validateEntity(
        copyEntity(VALUE_ITEMS_ENTITY_DEFAULT, {
          fields: {
            any: { type: 'AdminOnlyValueItem' },
          },
        })
      )
    ).toMatchSnapshot();
  });
});

describe('groupValidationIssuesByTopLevelPath', () => {
  test('no errors', () => {
    expect(groupValidationIssuesByTopLevelPath([])).toEqual({ root: [], children: new Map() });
  });

  test('root errors and list errors', () => {
    expect(
      groupValidationIssuesByTopLevelPath([
        { type: 'save', path: [], message: 'Root error' },
        { type: 'save', path: [0], message: 'Index 0 error' },
      ])
    ).toEqual({
      root: [{ type: 'save', path: [], message: 'Root error' }],
      children: new Map([[0, [{ type: 'save', path: [], message: 'Index 0 error' }]]]),
    });
  });

  test('root errors and field errors', () => {
    expect(
      groupValidationIssuesByTopLevelPath([
        { type: 'save', path: [], message: 'Root error' },
        { type: 'save', path: ['field'], message: 'Field error' },
      ])
    ).toEqual({
      root: [{ type: 'save', path: [], message: 'Root error' }],
      children: new Map([['field', [{ type: 'save', path: [], message: 'Field error' }]]]),
    });
  });
});
